# envwoman

./: .gitignore  CONTRIBUTING.md  Caddyfile  Caddyfile-docker  Pipfile  README.md  docker-compose.yml  main.py  openapi.json
.github/workflows/: cloudflare.yml  docker-publish.yml  main.yml
cli/: .gitignore  Cargo.toml
cli/src/: config.rs  encryption.rs  main.rs  structs.rs
cli/src/functions/: add.rs  change_password.rs  delete_project.rs  helpers.rs  init.rs  list_projects.rs  login.rs  logout.rs  mod.rs  pull.rs  push.rs  reinit.rs
helpers/: config.py
helpers/security/: verify.py
routers/: cli_login.py  projects.py  users.py
server/: Dockerfile  Pipfile  README.md  main.py
server/helpers/: auth.py  config.py  models.py  rl.py
server/helpers/security/: verify.py
server/routers/: cli_login.py  projects.py  users.py
website/: Dockerfile  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  svelte.docker.config.js  tailwind.config.cjs
website/src/: app.css  app.html
website/src/lib/: FakeTerminal.svelte  Footer.svelte  navbar.svelte  steps.js  tracker.js
website/src/routes/: __layout.svelte  contact.svelte  index.svelte  login.svelte  register.svelte  success.svelte
website/static/: robots.txt
